--- a/Code 1/Responsive-Navbar.html
+++ b/Code 1/Responsive-Navbar.html
@@ -6,20 +6,21 @@
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet"> 
 </head>
 <body>
-<div class="cc-navbar" id="cc-nav">
-    <a href="#" class="cc-brand">Your Brand</a>
-    <a href="#">Our Products</a>
-    <a href="#">Contact Us</a>
-    <a href="#">About Us</a>
-    <div class="cc-dropdown-container">
-    <div class="cc-dropdown-button">Social Networks <i class="fas fa-caret-down"></i></div>
-    <div class="cc-dropdown-items">
-        <a href="#"><i class="fab fa-facebook"></i> Facebook</a>
-        <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
-        <a href="#"><i class="fab fa-google-plus-square"></i> Google-Plus</a>
+    <div class="cc-nav" id="cc-navbar">
+        <a href="#" class="cc-brand">Your Brand</a>
+        <a href="#">Our Products</a>
+        <a href="#">Contact Us</a>
+        <a href="#">About Us</a>
+        <div class="cc-dropdown-container">
+            <div class="cc-dropdown-button">Social Networks <i class="fas fa-caret-down"> </i></div>
+            <div class="cc-dropdown-items">
+                <a href="#"><i class="fab fa-facebook"></i> Facebook</a>
+                <a href="#"><i class="fab fa-twitter"></i> Twitter</a>
+                <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
+                
+            </div>
+        </div>
+        <a href="javascript:void(0)" class="cc-icon" onclick="show_hide_nav()"><i class="fas fa-bars"></i></a>
     </div>
-    </div>
-    <a href="javascript:void(0)"  class="cc-icon"><i class="fas fa-bars"></i></a>
-</div>    
 </body>
 </html>
